test/expected/k_explain_b_i.out
struct S; explain int (^S)()
               ^
16: error: "S": previously declared as type: typedef struct S S
